# point-engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.TXT  README.md  build.bat  build64.bat  gen_release.bat  xmake.lua
docs/: Getting started.odt
engineRes/shaders/: fragment.glsl  vertex.glsl
include/: Vector.h
lib/msvc/: OpenAL32.exp  OpenAL32.lib  common.lib  ex-common.lib
projects/codeblocks/: PointEngine.cbp  PointEngine.depend  PointEngine.layout  prebuild.bat
projects/vs2022/PointEngine/: PointEngine.sln
projects/vs2022/PointEngine/PointEngine/: PointEngine.vcxproj  PointEngine.vcxproj.filters
source/: Audio.cpp  Audio.h  Collision.cpp  Collision.h  ConVars.cpp  ConVars.h  Console.cpp  Console.h  Core.h  Entity.cpp  Entity.h  Event.h  Game.cpp  Game.h  Input.cpp  Input.h  Logging.cpp  Logging.h  PointEngine.h  Sprite.cpp  Sprite.h  Types.h  UFP.cpp  UFP.h  UFP.h.save-failed  Utils.cpp  Utils.h  Vector.cpp  Vector.h  Window.cpp  Window.h
source/PointEngine/: Audio.cpp  Audio.h  BuiltInEntities.cpp  BuiltInEntities.h  Collision.cpp  Collision.h  ConVars.cpp  ConVars.h  Console.cpp  Console.h  Core.h  Entity.cpp  Entity.h  Event.cpp  Event.h  Font.cpp  Font.h  Game.cpp  Game.h  Input.cpp  Input.h  Lighting.cpp  Lighting.h  Logging.cpp  Logging.h  PointEngine.h  Sprite.cpp  Sprite.h  Utils.cpp  Utils.h  Vector.cpp  Vector.h  Window.cpp  Window.h
source/PointEngine/Console/: ConVars.cpp  ConVars.h  Console.cpp  Console.h
source/PointEngine/Entity/: BuiltInEntities.cpp  BuiltInEntities.h  Entity.cpp  Entity.h
source/PointEngine/Error/: Error.cpp  Error.h
source/PointEngine/Gamestate/: Gamestate.cpp  Gamestate.h
source/PointEngine/Hardware/: HardwareInfo.cpp  HardwareInfo.h
source/PointEngine/Rendering/: Font.cpp  Font.h  Sprite.cpp  Sprite.h  Window.cpp  Window.h
source/PointEngine/Rendering/OpenGL/: Renderer.cpp  Renderer.h  Texture.cpp  Texture.h
source/PointEngine/UI/: UIManager.cpp  UIManager.h  Widgets.cpp  Widgets.h
source/PointEngine/Utils/: DebugInfo.h  Performace.h  Performance.cpp  RNG.cpp  RNG.h  Utils.h
source/Rendering/: Window.cpp  Window.h
source/TestGame/: Bullet.cpp  Bullet.h  Main.cpp  Player.cpp  Player.h  RandomSquare.cpp  RandomSquare.h
source/game/: Bullet.cpp  Main.cpp  Player.cpp  Player.h  RandomSquare.cpp
source/imgui/: imgui_impl_sdl2.cpp
